--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -9,8 +9,9 @@
 				</div>
 				<ul style="text-align: left;">
 					<h3>Recent Updates</h3>
-					<li><b>Mobile Responsiveness:</b> 
-					The layout of the site now responds to mobile devices. Minor fixes are needed for the margins, but it should be fully-functional on your phone or tablet.
+					<li><b>URL:</b> 
+					The site can now be found
+					at just-write.net.
 					</li>
 				</ul>
 			</div>
