css refactoring, routes fixes, minor style changes

--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -1,7 +1,7 @@
 <div class="view container">
-	<h2 class="browse-heading content-purple">Users</h2>
+	<h2 class="browse-heading box purple-box">Users</h2>
 	<div class="row">
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
 			<hr>
 			<div ng-repeat="user in usersNewest | limitTo: 6">
@@ -9,7 +9,7 @@
 			<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-odd content-box col-xs-12 col-sm-4">
+		<div class="dynamic-box blue-box box content-box col-xs-12 col-sm-4">
 			<h3>Prolific</h3>
 			<hr>
 			<div ng-repeat="user in usersProlific | limitTo: 6">
@@ -18,7 +18,7 @@
 			<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-odd content-box col-xs-12 col-sm-4">
+		<div class="dynamic-box blue-box box content-box col-xs-12 col-sm-4">
 			<h3>Random</h3>
 			<hr>
 			<div ng-repeat="user in usersRandom | limitTo: 6">
@@ -28,9 +28,9 @@
 			</div>
 		</div>
 	</div>
-	<h2 class="browse-heading content-purple">Stories</h2>
+	<h2 class="browse-heading box purple-box">Stories</h2>
 	<div class="row">
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
 			<hr>
 			<div ng-repeat="story in storiesNewest | limitTo: 6">
@@ -42,7 +42,7 @@
 				<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Popular</h3>
 			<hr>
 			<div ng-repeat="story in storiesPopular | limitTo: 6">
@@ -54,7 +54,7 @@
 				<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Random</h3>
 			<hr>
 			<div ng-repeat="story in storiesRandom | limitTo: 6">
@@ -68,9 +68,9 @@
 		</div>
 	</div>
 
-	<h2 class="browse-heading content-purple">Poems</h2>
+	<h2 class="browse-heading purple-box box">Poems</h2>
 	<div class="row">
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
 			<hr>
 			<div ng-repeat="poem in poemsNewest | limitTo: 6">
@@ -82,7 +82,7 @@
 				<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Popular</h3>
 			<hr>
 			<div ng-repeat="poem in poemsPopular | limitTo: 6">
@@ -94,7 +94,7 @@
 				<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Random</h3>
 			<hr>
 			<div ng-repeat="poem in poemsRandom | limitTo: 6">
@@ -107,9 +107,9 @@
 			</div>
 		</div>
 	</div>
-	<h2 class="browse-heading content-purple">Essays</h2>
+	<h2 class="browse-heading box purple-box">Essays</h2>
 	<div class="row">
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
 			<hr>
 			<div ng-repeat="essay in essaysNewest | limitTo: 6">
@@ -121,7 +121,7 @@
 				<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Popular</h3>
 			<hr>
 			<div ng-repeat="essay in essaysPopular | limitTo: 6">
@@ -133,7 +133,7 @@
 				<hr ng-hide="$last">
 			</div>
 		</div>
-		<div class="dynamic-box content-box content-odd col-xs-12 col-sm-4">
+		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Random</h3>
 			<hr>
 			<div ng-repeat="essay in essaysRandom | limitTo: 6">
