--- a/public/html/private/submissionform.html
+++ b/public/html/private/submissionform.html
@@ -1,6 +1,6 @@
 <div class="view">
-	<h1 class="content-purple browse-heading">Submission Form</h1>
-	<form class="content-odd info-box" method="POST" action="/api/submission">
+	<h1 class="purple-box box browse-heading">Submission Form</h1>
+	<form class="blue-box box info-box" method="POST" action="/api/submission">
 		<div class="form-heading">Title</div>
 		<input type="text" name="title" placeholder="title...">
 		<div class="form-heading">Type <span style="color: red; font-size: 1.5rem;"> Required!</span></div>
