--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -1,8 +1,8 @@
 <div class="view intro-page" class="container">
-	<div class="box main-box row">
+	<div class="main-box row">
 		<div>
-			<h1 class="content-box content-purple">Welcome to Just Write!</h1>
-			<div class="info-box content-odd">
+			<h1 class="content-box box purple-box">Welcome to Just Write!</h1>
+			<div class="info-box box blue-box">
 				<p>Just Write is just what it sounds like! It's a bare-bones site for writers to share their essays, stories, and poetry, with none of the distractions many other writing sites have. You won't find excessive images and video or social media here; communication is limited to comments on submissions, so that writers can focus on improving their work and helping others improve theirs. Sound like your cup of tea?</p>
 				<div class="dummy-container">
 					<a class="btn btn-default" href="/#/signup/">Sign Up!</a>
