--- a/public/html/public/newuser.html
+++ b/public/html/public/newuser.html
@@ -1,6 +1,6 @@
 <div class="view">
-	<h1 class="content-purple browse-heading">Register</h1>
-	<form class="content-odd info-box" method="POST" action="auth/signup">
+	<h1 class="purple-box box browse-heading">Register</h1>
+	<form class="blue-box box info-box" method="POST" action="auth/signup">
 		<div>Choose a username! Do not use your full name.</div>
 		<input type="text" name="username" placeholder="username...">
 		<div>Enter a password.</div>
