--- a/public/html/confirmation/loginerror.html
+++ b/public/html/confirmation/loginerror.html
@@ -1,3 +1,3 @@
-<div class="view content-box content-purple">
+<div class="view info-box box purple-box">
 Uh-oh, it looks like you entered an incorrect password or username. Please try logging in again.
 </div>
