added view all users page

--- a/public/html/private/submission.html
+++ b/public/html/private/submission.html
@@ -6,7 +6,7 @@
 			<p>
 				{{submissions.description}}
 			</p>
-			<a ng-href="/#/{{type}}/{{submission._id}}/edit"><button type="button" ng-if="submissionAuthor">Edit</button></a>
+			<!-- <a ng-href="/#/{{type}}/{{submission._id}}/edit"><button type="button" ng-if="submissionAuthor">Edit</button></a> -->
 		</div>
 		<hr>
 		<div class="submission-content container">
