--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -9,9 +9,16 @@
 				</div>
 				<ul style="text-align: left;">
 					<h3>Recent Updates</h3>
+					<li><b>Browse users:</b>
+					From the "browse" page, click "show all" to view all users, which can be sorted a few different ways. The same feature will soon be available for each type of content, as well.
+					</li>
 					<li><b>URL:</b> 
 					The site can now be found
 					at just-write.net.
+					</li>
+					<h3>Upcoming updates:</h3>
+					<li><b>Edit:</b>
+					The ability to edit submissions and user profiles is in progress.
 					</li>
 				</ul>
 			</div>
