--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -1,5 +1,8 @@
 <div class="view container">
-	<h2 class="browse-heading box purple-box">Users</h2>
+	<div class="browse-heading box purple-box" style="position: relative;">
+		<h2 style="display: inline;">Users</h2>
+		<a class="btn" href="/#/browse/users" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
