--- a/public/html/private/browseusers.html
+++ b/public/html/private/browseusers.html
@@ -1,17 +1,34 @@
 <div class="view container">
-	<div class="row" style="margin: auto;">
-		<h1 class="box purple-box">Users</h1>
-		<div ng-class-odd="'blue-box'" ng-class-even="'pink-box'" class="box col-xs-10 col-sm-3" ng-repeat="user in usersNewest">
-			<div style="width: 100%; margin: auto;">
-				<h2><a ng-href="/#/profile/{{user.username}}">{{user.username}}</a></h2>
-				<div>Joined {{user.dateJoined | date:"MMMM d 'at' h:mm a" }}</div>
+	
+<!-- SORTING BUTTONS and HEADING-->
+
+	<div class="box purple-box">
+		<h1 class="browse-heading">Users</h1>
+	</div>
+
+	<ul class="nav-list browse-heading">
+		<li><button class="btn" type="button" ng-click="sortUsers('date')">Recently joined</button></li>
+		<li><button class="btn" type="button" ng-click="sortUsers('submissions')">Most submissions</button></li>
+		<li><button class="btn" type="button" ng-click="sortUsers('stories')">Most stories</button></li>
+		<li><button class="btn" type="button" ng-click="sortUsers('poems')">Most poems</button></li>
+		<li><button class="btn" type="button" ng-click="sortUsers('essays')">Most essays</button></li>
+		<li><button class="btn" type="button" ng-click="sortUsers('comments')">Most comments</button></li>
+	</ul>
+
+<!-- USERS LIST -->
+	
+	<div class="row">
+		<div class="col-xs-12 col-sm-4 col-md-3" ng-repeat="user in users">
+			<div ng-class-odd="'blue-box'" ng-class-even="'pink-box'" class="item box">
+				<a ng-href="/#/profile/{{user.username}}"><h2>{{user.username}}</h2></a>
+				<div>Joined {{user.dateJoined | date:"M/d/yyyy" }}</div>
 				<div>{{user.numSubmissions}} submissions</div>
 				<div>{{user.numStories}} stories</div>
 				<div>{{user.numPoems}} poems</div>
 				<div>{{user.numEssays}} essays</div>
 				<div>{{user.numComments}} comments</div>
-				<div>{{user.bio | limitTo: 150}}</div>
 			</div>
 		</div>
 	</div>
+	
 </div>
