progress on browse submission pages

--- a/public/html/private/browse.html
+++ b/public/html/private/browse.html
@@ -31,7 +31,10 @@
 			</div>
 		</div>
 	</div>
-	<h2 class="browse-heading box purple-box">Stories</h2>
+	<div class="browse-heading box purple-box" style="position: relative;">
+		<h2 style="display: inline;">Stories</h2>
+		<a class="btn" href="/#/browse/stories" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
@@ -71,7 +74,10 @@
 		</div>
 	</div>
 
-	<h2 class="browse-heading purple-box box">Poems</h2>
+	<div class="browse-heading box purple-box" style="position: relative;">
+		<h2 style="display: inline;">Poems</h2>
+		<a class="btn" href="/#/browse/poems" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
@@ -110,7 +116,10 @@
 			</div>
 		</div>
 	</div>
-	<h2 class="browse-heading box purple-box">Essays</h2>
+	<div class="browse-heading box purple-box" style="position: relative;">
+		<h2 style="display: inline;">Essays</h2>
+		<a class="btn" href="/#/browse/essays" style="position: absolute; right: 1rem; top: 1rem;">show all</a>
+	</div>
 	<div class="row">
 		<div class="dynamic-box content-box blue-box box col-xs-12 col-sm-4">
 			<h3>Newest</h3>
