--- a/public/html/private/browseusers.html
+++ b/public/html/private/browseusers.html
@@ -8,6 +8,7 @@
 
 	<ul class="nav-list browse-heading">
 		<li><button class="btn" type="button" ng-click="sortUsers('date')">Recently joined</button></li>
+		<li><button class="btn" type="button" ng-click="sortUsers('alpha')">Alphabetical</button></li>
 		<li><button class="btn" type="button" ng-click="sortUsers('submissions')">Most submissions</button></li>
 		<li><button class="btn" type="button" ng-click="sortUsers('stories')">Most stories</button></li>
 		<li><button class="btn" type="button" ng-click="sortUsers('poems')">Most poems</button></li>
