--- a/public/html/public/intro.html
+++ b/public/html/public/intro.html
@@ -9,8 +9,8 @@
 				</div>
 				<ul style="text-align: left;">
 					<h3>Recent Updates</h3>
-					<li><b>Browse users:</b>
-					From the "browse" page, click "show all" to view all users, which can be sorted a few different ways. The same feature will soon be available for each type of content, as well.
+					<li><b>Updated browse page:</b>
+					Check out the new browse page! You can now view all users and submissions on a separate page, sorted various ways.
 					</li>
 					<li><b>URL:</b> 
 					The site can now be found
